# Mavericks

./: Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
aaryan/agents/: clause_detective.py  pdf_digester.py  pdf_reporter.py  plain_translator.py  report_generator.py
agents/: README.md  clause_detective.py  pdf_digester.py  pdf_reporter.py  plain_translator.py  report_generator.py
agents/agentos_lawco/: agent_risk_assesment.py
agents/agentos_translate/: agent_translate.py
agents/agentos_txt_file/: agent_txt_file.py
app/: main.py
cli/agents/agent_contract_image_analyzer/: README.md  agent_contract_image_analyzer.py  pyproject.toml  requirements.txt
cli/agents/agent_doc_reader/: agent_doc_reader.py  pyproject.toml
cli/agents/agent_pdf_reader/: agent_pdf_reader.py  pyproject.toml
cli/agents/agent_txt_file/: agent_txt_file.py
cli/agents/agents/: clause_detective.py  risk_analyzer.py  search_agents.py  text_extractor.py
crf-fe/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
crf-fe/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
crf-fe/src/components/: DemoSection.tsx  TeamSection.tsx  TopBanner.tsx
crf-fe/src/contexts/: ChatContext.tsx  DocumentContext.tsx  WebSocketContext.tsx
crf-fe/src/hooks/: useChat.ts  useDocument.ts  useFileUpload.ts  useLocalStorage.ts  useToast.ts  useWebSocket.ts
crf-fe/src/services/: apiService.ts  authService.ts  chatService.ts  fileUploadService.ts  localStorageService.ts  modelService.ts  (+1 more)
master_agent/: master.py
utils/: preprocess.py
(+31 files in other folders)
