[project]
name = "agent-contract-image-analyzer"
version = "0.1.0"
description = "AI agent for analyzing contracts from images using OCR and legal risk assessment"
requires-python = ">=3.12"
dependencies = [
    "genai-protocol",
    "loguru>=0.7.3",
    "pydantic==2.11.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "tavily-python>=0.5.0",
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0"
]
